<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/layout_label"
            android:text="@string/layout_label"
            style="@style/Text.Headline"
            app:layout_constraintStart_toStartOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/marginTop"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/pickColor1"
            android:textColor="@color/white"
            android:layout_marginEnd="@dimen/size_01"
            app:layout_constraintEnd_toStartOf="@id/pickColor2"
            app:layout_constraintStart_toStartOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/layout_label"/>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:id="@+id/pickColor2"
            android:textColor="@color/white"
            android:layout_marginStart="@dimen/size_01"
            app:layout_constraintEnd_toEndOf="@id/marginEnd"
            app:layout_constraintStart_toEndOf="@id/pickColor1"
            app:layout_constraintTop_toBottomOf="@id/layout_label" />

        <ToggleButton
            android:id="@+id/color1"
            style="@style/Button.Checkable"
            android:background="@drawable/toggle_color1"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/dark"
            app:layout_constraintStart_toStartOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/pickColor1" />

        <ToggleButton
            android:id="@+id/dark"
            style="@style/Button.Checkable"
            android:background="@drawable/toggle_dark"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/color2"
            app:layout_constraintStart_toEndOf="@id/color1"
            app:layout_constraintTop_toBottomOf="@id/pickColor1" />

        <ToggleButton
            android:id="@+id/color2"
            style="@style/Button.Checkable"
            android:background="@drawable/toggle_color2"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/marginEnd"
            app:layout_constraintStart_toEndOf="@id/dark"
            app:layout_constraintTop_toBottomOf="@id/pickColor2" />

        <ToggleButton
            android:id="@+id/gradient"
            style="@style/Button.Checkable"
            android:background="@drawable/toggle_gradient"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/equalizer"
            app:layout_constraintStart_toStartOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/color1" />

        <ToggleButton
            android:id="@+id/equalizer"
            style="@style/Button.Checkable"
            android:background="@drawable/toggle_equalizer"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@id/ambient"
            app:layout_constraintStart_toEndOf="@id/gradient"
            app:layout_constraintTop_toBottomOf="@id/dark" />

        <ToggleButton
            android:id="@+id/ambient"
            style="@style/Button.Checkable"
            android:background="@drawable/toggle_ambient"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toEndOf="@id/equalizer"
            app:layout_constraintEnd_toEndOf="@id/marginEnd"
            app:layout_constraintTop_toBottomOf="@id/color2" />

        <View
            android:id="@+id/separator1"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/size_02"
            android:background="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintTop_toBottomOf="@id/ambient"/>

        <TextView
            android:id="@+id/sensibility_label"
            android:text="@string/sensibility_label"
            style="@style/Text.Headline"
            app:layout_constraintTop_toBottomOf="@id/separator1"
            app:layout_constraintStart_toStartOf="@id/marginStart"
            app:layout_constraintBottom_toBottomOf="@id/sensibility_auto"/>

        <CheckBox
            android:id="@+id/sensibility_auto"
            android:text="@string/sensibility_auto"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_07"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="@id/sensibility_label"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"/>

        <Button
            android:id="@+id/sensibility_minus"
            android:layout_width="@dimen/size_07"
            android:layout_height="@dimen/size_07"
            android:text="@string/minus"
            app:layout_constraintTop_toBottomOf="@+id/sensibility_label"
            app:layout_constraintStart_toEndOf="@id/marginStart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensibility_adjust"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/sensibility_minus"
            app:layout_constraintEnd_toStartOf="@id/sensibility_plus"
            app:layout_constraintTop_toBottomOf="@id/sensibility_label"
            app:layout_constraintBottom_toBottomOf="@id/sensibility_plus"/>

        <Button
            android:id="@+id/sensibility_plus"
            android:layout_width="@dimen/size_07"
            android:layout_height="@dimen/size_07"
            android:text="@string/plus"
            app:layout_constraintTop_toBottomOf="@+id/sensibility_label"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"/>

        <View
            android:id="@+id/separator2"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/size_02"
            android:background="@color/dark_grey"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintTop_toBottomOf="@id/sensibility_plus"/>

        <TextView
            android:id="@+id/brightness_label"
            android:text="@string/brightness_label"
            style="@style/Text.Headline"
            app:layout_constraintStart_toStartOf="@id/marginStart"
            app:layout_constraintTop_toBottomOf="@id/separator2"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/brightness_slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:valueFrom="0"
            android:valueTo="255"
            app:labelStyle="@style/Tooltip"
            app:layout_constraintStart_toEndOf="@id/marginStart"
            app:layout_constraintEnd_toStartOf="@id/marginEnd"
            app:layout_constraintTop_toBottomOf="@id/brightness_label"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/size_02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/size_02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/size_02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/marginBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/size_02" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>